update service coach2store

--- a/.env
+++ b/.env
@@ -30,3 +30,6 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+###> API_KEY from Coach 2 Store ###
+API_KEY_C2S=API_KEY_C2S
