--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    API_KEY: '%env(resolve:API_KEY_C2S)%'
 
 services:
     # default configuration for services in *this* file
@@ -26,3 +27,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\Coach2StoreApi:
+        arguments: ['%API_KEY%']
