--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,3 +7,5 @@ parameters:
         - %rootDir%/../../../src/Migrations 
     excludes_analyse:
         - src/DataFixtures
+    ignoreErrors:
+        - "#Avoid unused parameters such as \\'\\$options\\'\\.#"
